# video-decoding

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WORKSPACE
bazel/: BUILD.tpl  pkg_config.bzl
decoding/: BUILD  video_decoding.cpp  video_decoding.h  video_decoding_main.cpp
encoding/: BUILD  image_encoding.cpp  image_encoding.h
remux/: BUILD  remux_keyframe.cpp  remux_keyframe.h
src/: BUILD  main.c  video_decoding.cpp  video_decoding.h
